refactor: replace MySQL stored procedures with standard JDBC for universal DB support